--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <!-- Description for Google Searchs -->
     <meta 
-        name="description"
-        content="This Responsive Calculator is a portifolio project and challenge made by Frotntend Mentor"
+        name="Descripcion"
+        content="Aplicacion utilizada para un proyecto de QA"
     >
 
     <title>Calculator</title>
